# tree-sitter-test

./: .gitignore  .lspignore  Cargo.toml  README.md  tree.txt
input-files/: file1.py  math.py  math_py.py  math_ts.ts  math_utils.py  math_utils.ts  method_test.py  method_test_aux.py
parsed-files/: file1.json  math.json  math_ts.json  method_test.json  method_test_aux.json
src/: lib.rs  main.rs  parser.rs
src/models/: analysis_result.rs  class_info.rs  function_call.rs  function_info.rs  import_info.rs  local_variable.rs  mod.rs  parameter_info.rs
src/parser/: mod.rs  python.rs  typescript.rs
tests/: parser_tests.rs  python_parser_tests.rs  typescript_parser_tests.rs
