[package]
name = "tree-sitter-test"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.20"
tree-sitter-python = "0.20"

[lib]
name = "tree_sitter_test"
path = "src/lib.rs"

[[bin]]
name = "tree-sitter"
path = "src/main.rs"
